--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 ﻿
 更新紀錄：
 
+v1.8.0
+- 因為修改 Backspace 行為的關係，同時也修改萬用字元部份的處理方式
+- 因應使用者的要求，更新與修正 Backspace 的行為
+- 更新輸入法表格到 v2023-1.0 版
+
 v1.7.9
 - 因為 MinGW 4.5.0-1 C++ auto-import issue 的關係，更新 for MinGW 使用的
   Makefile.gcc，目前暫時先使用靜態連結設定來解決問題。
